--- a/Inventory/Pages/Index.razor
+++ b/Inventory/Pages/Index.razor
@@ -1,7 +1,5 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<Form001 Message="Saludos"/>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<Form002></Form002>
