--- a/Inventory/Pages/Index.razor
+++ b/Inventory/Pages/Index.razor
@@ -1,5 +1,10 @@
 ﻿@page "/"
 
-<Form001 Message="Saludos"/>
 
-<Form002></Form002>
+
+@*<CreateProductComponent></CreateProductComponent>
+
+<hr />
+
+<ListProductsComponent></ListProductsComponent>*@
+
