--- a/Inventory/Shared/NavMenu.razor
+++ b/Inventory/Shared/NavMenu.razor
@@ -22,6 +22,12 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="products/list">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Lista de Productos
+            </NavLink>
+        </li>
+
     </ul>
 </div>
 
